--- a/html/nuhost/html/index-two.html
+++ b/html/nuhost/html/index-two.html
@@ -341,9 +341,9 @@
 </div>
 </div>
 </section>
-<section class="second-items-home" style="display: none;" >
+<section class="second-items-home" >
 <div class="container">
-<div class="tittle-simple-one"><h5>treeuuu your best pricing plan<span>you want custom hosting plan.<br> No hidden charge.</span></h5></div>
+<div class="tittle-simple-one"><h5>Chose your best pricing plan<span>you want custom hosting plan.<br> No hidden charge.</span></h5></div>
 <div class="mr-tp-70 mr-bt-50">
 <div class="row">
 <div id="monthly-yearly-chenge" class="col align-self-start">
@@ -643,7 +643,7 @@ contact us
 </section>
 <section class="perlex-efect-section parallax-window" data-parallax="scroll" data-image-src="img/demo/bg.jpeg">
 <span class="perlex-hidden-iverlow"></span>
-<div class="container hidden" style="display: none;" >
+<div class="container hidden"  >
 <div class="row justify-content-left">
 <div class="col-md-5">
 <div class="video-section-text-place">
@@ -660,10 +660,10 @@ contact us
 </div>
 </div>
 </section>
-<section class="our-sevices-section" style="display: none;">
+<section class="our-sevices-section" >
 <div class="container">
 <div class="tittle-simple-one">
-<h5>Cho. c.; plan<span>you want custom hosting plan.<br> No hidden charge.</span></h5>
+<h5>Chose your best pricing plan<span>you want custom hosting plan.<br> No hidden charge.</span></h5>
 </div>
 </div>
 <ul id="oursevices" class="carousel carousel-nav-services">
